# Car-Concierge-Agentic-Ai

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/agent/: basic_dummy_agent.py
app/api/v1/: router.py  schema.py
app/api/v1/endpoints/: chat.py  conversation.py  message.py
app/core/: config.py  error_handler.py  exceptions.py  logger.py
app/llm/: model_catalog.py  model_resolver.py
app/repository/: conversation_repository.py  database.py  message_repository.py
app/security/: basic.py
app/stream/: dispatcher.py
app/tool/: dummy_booking_kb.py  dummy_search_vehicle.py
app/tool/data/: mock_ads_data.py  olx_booking_terms.md
app/workflow/: base_workflow.py  langchain_basic.py  workflow_resolver.py
app_strands_agent/: main.py  session_context.py
app_strands_agent/agents/: __init__.py  _helper.py  orchestrator_agent.py
app_strands_agent/api/v1/: router.py  schema.py
app_strands_agent/clients/: __init__.py  bedrock.py  keyspaces.py  opensearch.py  valkey.py
app_strands_agent/core/: __init__.py  config.py  error_handler.py  exceptions.py  logger.py
app_strands_agent/engine/: __init__.py  cosine.py  geo_data.py  geo_resolver.py  os_engine.py  os_query_builder.py
app_strands_agent/instruction/: orchestrator_v2_prompt.txt
app_strands_agent/llm/: __init__.py  model_catalog.py  model_resolver.py
app_strands_agent/tools/: search_vehicles.py
cdk/: app.py  cdk.context.json  cdk.json  stack.py
configs/: settings.toml
db/cassandra/: schema.sql
tests/: conftest.py  test_api.py  test_health.py
(+1 files in other folders)
